@@ -1,11 +1,8 @@
-package com.flightcli.flight_cli;
+package com.flightcli.flight_cli.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.flightcli.flight_cli.service.FlightService;
-import com.flightcli.model.Aircraft;
-import com.flightcli.model.Airport;
-import com.flightcli.model.City;
-import com.flightcli.model.Passenger;
+import com.flightcli.flight_cli.model.Aircraft;
+import com.flightcli.flight_cli.model.Airport;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,6 +10,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,39 +32,35 @@ class FlightServiceTest {
         flightService = new FlightService(apiClient);
     }
 
-    // ---- Q1: Airports for city ----
+    // Q1: Airports for city
 
     @Test
     void getAirportsForCity_returnsListOfAirports() throws IOException, InterruptedException {
         Airport a1 = new Airport();
-        a1.setId(1L);
-        a1.setName("JFK Airport");
-        a1.setCode("JFK");
+        a1.setId(1L); a1.setName("JFK Airport"); a1.setCode("JFK");
 
         Airport a2 = new Airport();
-        a2.setId(2L);
-        a2.setName("LaGuardia Airport");
-        a2.setCode("LGA");
+        a2.setId(2L); a2.setName("LaGuardia Airport"); a2.setCode("LGA");
 
         when(apiClient.getList(eq("/cities/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(a1, a2));
+                .thenReturn(Arrays.asList(a1, a2));
 
-        List<Airport> airports = flightService.getAirportsForCity(1L);
+        List<Airport> result = flightService.getAirportsForCity(1L);
 
-        assertEquals(2, airports.size());
-        assertEquals("JFK Airport", airports.get(0).getName());
-        assertEquals("LGA", airports.get(1).getCode());
+        assertEquals(2, result.size());
+        assertEquals("JFK Airport", result.get(0).getName());
+        assertEquals("LGA", result.get(1).getCode());
         verify(apiClient, times(1)).getList(eq("/cities/1/airports"), any(TypeReference.class));
     }
 
     @Test
     void getAirportsForCity_returnsEmptyList_whenNoAirports() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/cities/99/airports"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
-        List<Airport> airports = flightService.getAirportsForCity(99L);
+        List<Airport> result = flightService.getAirportsForCity(99L);
 
-        assertTrue(airports.isEmpty());
+        assertTrue(result.isEmpty());
     }
 
     @Test
@@ -76,18 +71,16 @@ class FlightServiceTest {
         assertThrows(IOException.class, () -> flightService.getAirportsForCity(1L));
     }
 
-    // ---- Q2: Aircraft for passenger ----
+    // Q2: Aircraft for passenger
 
     @Test
     void getAircraftForPassenger_returnsListOfAircraft() throws IOException, InterruptedException {
         Aircraft aircraft = new Aircraft();
-        aircraft.setId(1L);
-        aircraft.setType("Boeing 737");
-        aircraft.setAirlineName("Delta");
-        aircraft.setNumberOfPassengers(180);
+        aircraft.setId(1L); aircraft.setType("Boeing 737");
+        aircraft.setAirlineName("Delta"); aircraft.setNumberOfPassengers(180);
 
         when(apiClient.getList(eq("/passengers/1/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of(aircraft));
+                .thenReturn(Arrays.asList(aircraft));
 
         List<Aircraft> result = flightService.getAircraftForPassenger(1L);
 
@@ -99,7 +92,7 @@ class FlightServiceTest {
     @Test
     void getAircraftForPassenger_returnsEmptyList_whenNoFlights() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/passengers/5/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
         List<Aircraft> result = flightService.getAircraftForPassenger(5L);
 
@@ -114,17 +107,15 @@ class FlightServiceTest {
         assertThrows(InterruptedException.class, () -> flightService.getAircraftForPassenger(1L));
     }
 
-    // ---- Q3: Airports for aircraft ----
+    // Q3: Airports for aircraft
 
     @Test
     void getAirportsForAircraft_returnsListOfAirports() throws IOException, InterruptedException {
         Airport airport = new Airport();
-        airport.setId(3L);
-        airport.setName("Heathrow");
-        airport.setCode("LHR");
+        airport.setId(3L); airport.setName("Heathrow"); airport.setCode("LHR");
 
         when(apiClient.getList(eq("/aircraft/2/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(airport));
+                .thenReturn(Arrays.asList(airport));
 
         List<Airport> result = flightService.getAirportsForAircraft(2L);
 
@@ -140,24 +131,22 @@ class FlightServiceTest {
         Airport a3 = new Airport(); a3.setId(3L); a3.setName("Charles de Gaulle"); a3.setCode("CDG");
 
         when(apiClient.getList(eq("/aircraft/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(a1, a2, a3));
+                .thenReturn(Arrays.asList(a1, a2, a3));
 
         List<Airport> result = flightService.getAirportsForAircraft(1L);
 
         assertEquals(3, result.size());
     }
 
-    // ---- Q4: Airports for passenger ----
+    // Q4: Airports for passenger
 
     @Test
     void getAirportsForPassenger_returnsListOfAirports() throws IOException, InterruptedException {
         Airport airport = new Airport();
-        airport.setId(1L);
-        airport.setName("JFK Airport");
-        airport.setCode("JFK");
+        airport.setId(1L); airport.setName("JFK Airport"); airport.setCode("JFK");
 
         when(apiClient.getList(eq("/passengers/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(airport));
+                .thenReturn(Arrays.asList(airport));
 
         List<Airport> result = flightService.getAirportsForPassenger(1L);
 
@@ -168,74 +157,10 @@ class FlightServiceTest {
     @Test
     void getAirportsForPassenger_returnsEmptyList_whenNoHistory() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/passengers/10/airports"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
         List<Airport> result = flightService.getAirportsForPassenger(10L);
 
         assertTrue(result.isEmpty());
-    }
-
-    // ---- Helper methods ----
-
-    @Test
-    void getAllCities_returnsListOfCities() throws IOException, InterruptedException {
-        City city = new City();
-        city.setId(1L);
-        city.setName("New York");
-        city.setState("NY");
-        city.setPopulation(8000000);
-
-        when(apiClient.getList(eq("/cities"), any(TypeReference.class)))
-                .thenReturn(List.of(city));
-
-        List<City> result = flightService.getAllCities();
-
-        assertEquals(1, result.size());
-        assertEquals("New York", result.get(0).getName());
-        assertEquals("NY", result.get(0).getState());
-    }
-
-    @Test
-    void getAllPassengers_returnsListOfPassengers() throws IOException, InterruptedException {
-        Passenger p = new Passenger();
-        p.setId(1L);
-        p.setFirstName("John");
-        p.setLastName("Doe");
-        p.setPhoneNumber("555-1234");
-
-        when(apiClient.getList(eq("/passengers"), any(TypeReference.class)))
-                .thenReturn(List.of(p));
-
-        List<Passenger> result = flightService.getAllPassengers();
-
-        assertEquals(1, result.size());
-        assertEquals("John", result.get(0).getFirstName());
-        assertEquals("Doe", result.get(0).getLastName());
-    }
-
-    @Test
-    void getAllAircraft_returnsListOfAircraft() throws IOException, InterruptedException {
-        Aircraft a = new Aircraft();
-        a.setId(1L);
-        a.setType("Airbus A320");
-        a.setAirlineName("United");
-        a.setNumberOfPassengers(150);
-
-        when(apiClient.getList(eq("/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of(a));
-
-        List<Aircraft> result = flightService.getAllAircraft();
-
-        assertEquals(1, result.size());
-        assertEquals("Airbus A320", result.get(0).getType());
-        assertEquals("United", result.get(0).getAirlineName());
-    }
-
-    @Test
-    void getAllAircraft_throwsIOException_whenConnectionFails() throws IOException, InterruptedException {
-        when(apiClient.getList(eq("/aircraft"), any(TypeReference.class)))
-                .thenThrow(new IOException("Connection timed out"));
-
-        assertThrows(IOException.class, () -> flightService.getAllAircraft());
     }
 }
